--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "agent-board",
-  "private": true,
+  "author": "brnt.cz",
+  "license": "MIT",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
