--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "marked": "^17.0.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
